@@ -92,22 +92,31 @@ let rec eliminate_ref id = function
 
 (* Simplification of exits *)
 
+type exit = {
+  mutable count: int;
+  mutable max_depth: int;
+}
+
 let simplify_exits lam =
 
   (* Count occurrences of (exit n ...) statements *)
   let exits = Hashtbl.create 17 in
 
-  let count_exit i =
-    try
-      !(Hashtbl.find exits i)
-    with
-    | Not_found -> 0
+  let try_depth = ref 0 in
 
-  and incr_exit i =
-    try
-      incr (Hashtbl.find exits i)
-    with
-    | Not_found -> Hashtbl.add exits i (ref 1) in
+  let get_exit i =
+    try Hashtbl.find exits i
+    with Not_found -> {count = 0; max_depth = 0}
+
+  and incr_exit i nb d =
+    match Hashtbl.find_opt exits i with
+    | Some r ->
+        r.count <- r.count + nb;
+        r.max_depth <- max r.max_depth d
+    | None ->
+        let r = {count = nb; max_depth = d} in
+        Hashtbl.add exits i r
+  in
 
   let rec count = function
   | (Lvar _| Lconst _) -> ()
@@ -133,25 +142,20 @@ let simplify_exits lam =
         | []|[_] -> count d
         | _ -> count d; count d (* default will get replicated *)
       end
-  | Lstaticraise (i,ls) -> incr_exit i ; List.iter count ls
+  | Lstaticraise (i,ls) -> incr_exit i 1 !try_depth; List.iter count ls
   | Lstaticcatch (l1,(i,[]),Lstaticraise (j,[])) ->
       (* i will be replaced by j in l1, so each occurrence of i in l1
          increases j's ref count *)
       count l1 ;
-      let ic = count_exit i in
-      begin try
-        let r = Hashtbl.find exits j in r := !r + ic
-      with
-      | Not_found ->
-          Hashtbl.add exits j (ref ic)
-      end
+      let ic = get_exit i in
+      incr_exit j ic.count (max !try_depth ic.max_depth)
   | Lstaticcatch(l1, (i,_), l2) ->
       count l1;
       (* If l1 does not contain (exit i),
          l2 will be removed, so don't count its exits *)
-      if count_exit i > 0 then
+      if (get_exit i).count > 0 then
         count l2
-  | Ltrywith(l1, _v, l2) -> count l1; count l2
+  | Ltrywith(l1, _v, l2) -> incr try_depth; count l1; decr try_depth; count l2
   | Lifthenelse(l1, l2, l3) -> count l1; count l2; count l3
   | Lsequence(l1, l2) -> count l1; count l2
   | Lwhile(l1, l2) -> count l1; count l2
@@ -176,6 +180,7 @@ let simplify_exits lam =
       end
   in
   count lam;
+  assert(!try_depth = 0);
 
   (*
      Second pass simplify  ``catch body with (i ...) handler''
@@ -273,15 +278,23 @@ let simplify_exits lam =
       Hashtbl.add subst i ([],simplif l2) ;
       simplif l1
   | Lstaticcatch (l1,(i,xs),l2) ->
-      begin match count_exit i with
-      | 0 -> simplif l1
-      | 1 when i >= 0 ->
-          Hashtbl.add subst i (xs,simplif l2) ;
-          simplif l1
-      | _ ->
-          Lstaticcatch (simplif l1, (i,xs), simplif l2)
-      end
-  | Ltrywith(l1, v, l2) -> Ltrywith(simplif l1, v, simplif l2)
+      let {count; max_depth} = get_exit i in
+      if count = 0 then
+        (* Discard staticcatch: not matching exit *)
+        simplif l1
+      else if i >= 0 && count = 1 && max_depth <= !try_depth then begin
+        (* Inline handler if there is a single occurrence and it is not
+           nested within an inner try..with *)
+        assert(max_depth = !try_depth);
+        Hashtbl.add subst i (xs,simplif l2);
+        simplif l1
+      end else
+        Lstaticcatch (simplif l1, (i,xs), simplif l2)
+  | Ltrywith(l1, v, l2) ->
+      incr try_depth;
+      let l1 = simplif l1 in
+      decr try_depth;
+      Ltrywith(l1, v, simplif l2)
   | Lifthenelse(l1, l2, l3) -> Lifthenelse(simplif l1, simplif l2, simplif l3)
   | Lsequence(l1, l2) -> Lsequence(simplif l1, simplif l2)
   | Lwhile(l1, l2) -> Lwhile(simplif l1, simplif l2)
